--- a/week4/twitter-app/src/Styles/Header.css
+++ b/week4/twitter-app/src/Styles/Header.css
@@ -5,14 +5,29 @@
     padding-left: 15px; 
     padding-right: 15px; 
     border-bottom: 2px solid black;
+    background-color: #00acee ;
 }
 
-.tabs {
-    color: blue; 
+.tabs { 
     margin-top: 35px;
+}
+
+#title {
+    color: white; 
 }
 
 #total-users { 
-    color: black; 
+    color: white; 
     margin-top: 35px;
+}
+
+#logo {
+    max-width: 50px;
+    max-height: 50px; 
+    margin-top: 20px; 
+}
+
+#site {
+    display: flex; 
+    flex-direction: row;
 }
