--- a/week5/twitter-app/src/Styles/Tweet.css
+++ b/week5/twitter-app/src/Styles/Tweet.css
@@ -59,5 +59,12 @@
 
   #likes{ 
     margin-left: 12px; 
-    padding-bottom: 10px; 
+    margin-bottom: 10px; 
+  }
+
+  .heart {
+    max-height: 30px;
+    margin-left: 6px;
+    margin-top: 5px;
+    padding-top: 10px;
   }
